<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="aboutContactMe">If you have any issues or suggestions, please contact me.</string>
    <string name="close">Close</string>
    <string name="btnClose">Close</string>
    <string name="btnCreate">Create</string>
    <string name="btnRefresh" tools:keep="@string/btnRefresh">REFRESH</string>
    <string name="btnSelect">Select</string>
    <string name="btnTrim">Trim</string>
    <string name="favOrderTitle">Order by?</string>
    <string name="installQuit">Installing, please wait.</string>
    <string name="installFinish">Installation completed</string>
    <string name="installMsg"><![CDATA[
The Bibles are installed in the following order: English, Spanish, French, Italian, Portuguese.\n\n
According to the device, the installation could be long.\n\n
If you return to your home screen, the installation will continue. You will be informed by the notifications when it will be finished.\n\n
Meanwhile, you can read the Bible in English (Books menu), read the Help or make other things with your device.\n
]]></string>
    <string name="itemAll">ALL</string>
    <string name="languageInstalling">Installing&#8230;</string>
    <string name="languageEnInstalled" tools:ignore="UnusedResources">Version installed: EN…</string>
    <string name="languageEsInstalled" tools:ignore="UnusedResources">Versions installed: EN, ES…</string>
    <string name="languageFrInstalled" tools:ignore="UnusedResources">Versions installed: EN, ES, FR…</string>
    <string name="languageClear">Clear</string>
    <string name="languageContinue">Continue</string>
    <string name="logErr">Error: %s</string>
    <string name="mnuAbout">About / Contact</string>
    <string name="mnuQuit">Quit</string>
    <string name="mnuAddTab">Add tab</string>
    <string name="mnuArticles">Articles</string>
    <string name="mnuBooks">Books</string>
    <string name="mnuBook">Book</string>
    <string name="mnuDelete">Delete</string>
    <string name="mnuEmpty" translatable="false"/>
    <string name="mnuFav">Favorites</string>
    <string name="mnuFavClearFilter">Clear</string>
    <string name="mnuFavSort">Sort</string>
    <string name="mnuHelp">Help</string>
    <string name="mnuNote">Favorites</string>
    <string name="mnuNoteFavAdd">Add to favorites</string>
    <string name="mnuNoteReadingAdd">Add to reading</string>
    <string name="mnuNoteRemove">Remove favorite/reading</string>
    <string name="mnuOpen">Open</string>
    <string name="mnuOpenChapter">Chapter</string>
    <string name="mnuOpenResult">All</string>
    <string name="mnuOpenVerse">Verse</string>
    <string name="mnuPlan">Plan</string>
    <string name="mnuPlans">Plans</string>
    <string name="mnuPlanReading">Plan of reading</string>
    <string name="mnuPlansReading">Plans of reading</string>
    <string name="mnuReading">Fav. readings</string>
    <string name="mnuRemoveTab">Remove tab</string>
    <string name="mnuCopy">Copy to clipboard</string>
    <string name="mnuCopyChapterToClipboard">Chapter</string>
    <string name="mnuCopyResultToClipboard">All</string>
    <string name="mnuCopyVerseToClipboard">Verse</string>
    <string name="mnuCopySourceToClipboard">Copy source to clipboard</string>
    <string name="mnuEmailSourceToDeveloper">Email source to developer</string>
    <string name="mnuRename">Rename</string>
    <string name="mnuEditOn">Edit article</string>
    <string name="mnuEditOff">Stop editing</string>
    <string name="mnuEditSelectFrom">&#8230; Select From</string>
    <string name="mnuEditSelectTo">&#8230; Select To</string>
    <string name="mnuEditSelectFromTo">&#8230; Select From = To</string>
    <string name="mnuEditMove">&#8230; Move</string>
    <string name="mnuEditMoveUp">Up</string>
    <string name="mnuEditMoveDown">Down</string>
    <string name="mnuEditAdd">&#8230; Add</string>
    <string name="mnuEditAddText">Text</string>
    <string name="mnuEditAddTitleLarge">Large title</string>
    <string name="mnuEditAddTitleSmall">Small title</string>
    <string name="mnuEditUpdate">&#8230; Update</string>
    <string name="mnuEditRemove">&#8230; Remove</string>
    <string name="mnuEditRemoveConfirm">Confirm</string>
    <string name="mnuMarkAllAboveAsRead">Mark all above as read</string>
    <string name="mnuUnmarkAllAboveAsRead">Mark all above as not read</string>
    <string name="mnuSearchBibleName">-</string>
    <string name="mnuSearchAll">Search</string>
    <string name="mnuGroupSettings">Settings</string>
    <string name="mnuGroupBible">Bible (preferred)</string>
    <string name="mnuGroupLayoutDynamicTitle">Display</string>
    <string name="mnuGroupLayoutDynamicSummary">How much columns?</string>
    <string name="mnuGroupLayoutDynamic1">Display for 1 language</string>
    <string name="mnuGroupLayoutDynamic2">Display for 2 languages</string>
    <string name="mnuGroupLayoutDynamic3">Display for 3 languages</string>
    <string name="mnuGroupLayoutDynamic4">Display for 4 languages</string>
    <string name="mnuGroupLayoutDynamic5">Display for 5 languages</string>
    <string name="mnuGroupTheme">Theme</string>
    <string name="mnuGroupThemeUiLayoutSummary">Require restart of application</string>
    <string name="mnuGroupTypeface">Font style</string>
    <string name="mnuGroupUiLayout">User interface</string>
    <string name="mnuGroupFontSize">Font size</string>
    <string name="mnuGroupFavSymbol">Favorite symbol</string>
    <string name="mnuPrbl">Parables</string>
    <string name="mnuListen">Listen</string>
    <string name="mnuListenReplay">Replay</string>
    <string name="mnuListenStop">Stop</string>
    <string name="mnuListenCurrentChapter">Your selection</string>
    <string name="mnuListenCurrentChapterFrom1">Beginning</string>
    <string name="mnuListenCurrentChapterFromPos">Current position</string>
    <string name="mnuListenPreviousChapter">Previous chapter</string>
    <string name="mnuListenNextChapter">Next chapter</string>
    <string name="mnuShare">Share</string>
    <string name="mnuShareChapter">Chapter</string>
    <string name="mnuShareResult">All</string>
    <string name="mnuShareVerse">Verse</string>
    <string name="mnuShowFav">Favorites</string>
    <string name="mnuThemeLight">Light</string>
    <string name="mnuTypefaceDefault">Default</string>
    <string name="searchBibleHint">Search Bible</string>
    <string name="searchFavHint">Search \u2606</string>
    <string name="sendEmail">Email</string>
    <string name="optionsDisabledInstalling">Some menu options have been disabled during the installation.</string>
    <string name="planCompleted">Completed</string>
    <string name="planCreate">Create</string>
    <string name="planCreating">Creating plan&#8230;</string>
    <string name="planDaySymbol">day</string>
    <string name="planDaysSymbol">days</string>
    <string name="planDayLateSymbol">late</string>
    <string name="planDayEarlySymbol">early</string>
    <string name="planSelect">Plans of reading</string>
    <string name="planSelectMsg">You don\'t have a plan of reading yet. Please select a theme or a book in the list.</string>
    <string name="planStartDate">Start date:\n(y/m/d)</string>
    <string name="planBookCount">Books</string>
    <string name="planCalTitleDay">Day:</string>
    <string name="planCalTitleDt">Day\n(y/m/d)</string>
    <string name="planCalTitleIsRead">Mark\nas read</string>
    <string name="planCalTitleUntil">Start\nEnd</string>
    <string name="planCalTitleDayCount">Days:</string>
    <string name="planCalTitleVerseCount">Verses\nby day:</string>
    <string name="planChapterCount">Chapters</string>
    <string name="planVerseCount">Verses</string>
    <string name="switchToArt">Articles</string>
    <string name="switchToMyArt">My articles</string>
    <string name="emailChooser">Email</string>
    <string name="seeGen2_2">Genesis 2.2</string>
    <string name="seeMat24_32">Matthew 24.32</string>
    <string name="tabEmpty" translatable="false"><![CDATA[<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>]]></string>
    <string name="toastEmpty">Empty!</string>
    <string name="toastEmpty3">Min. 3 characters!</string>
    <string name="toastChapterFailure">End of book&#8230;</string>
    <string name="toastListenQuit">Stop the audio Bible&#8230;</string>
    <string name="toastBookNotInstalled">Book not installed!</string>
    <string name="toastNoAppsToShare">No applications to share!</string>
    <string name="toastNoBrowser">Install a browser.</string>
    <string name="toastRefAdded">added</string>
    <string name="toastRefIncorrect">Reference incorrect!</string>
    <string name="toastRestartLong">Restart the application to take effect&#8230;</string>
    <string name="toastRestartShort">Restart the application&#8230;</string>
    <string name="tvBookInstall">(installing&#8230;)</string>
    <string name="tvBookTitle">Book</string>
    <string name="tvBookOT">- Old Testament -</string>
    <string name="tvBookNT">- New Testament -</string>
    <string name="tvChapter">Chapter:</string>
    <string name="tvLanguage">Language:</string>
    <string name="tvPlanBooks">- Books -</string>
    <string name="tvPlanThemes">- Themes -</string>
    <string name="tvPlanYourPlans">- Your plans -</string>
    <string name="tvTrad">Order:</string>
    <string name="tvFavOrder">Order by:</string>
    <string name="favOrder1Short">Date</string>
    <string name="favOrder2Short">Book</string>
    <string name="tvFavFilter">Favorites:</string>
    <string name="favFilter1Short">Normal</string>
    <string name="favFilter2Short">Reading</string>
    <string name="PRBL1">The Good Shepherd</string>
    <string name="PRBL2">The wheat and the tares (1)</string>
    <string name="PRBL3">The wheat and the tares (2)</string>
    <string name="PRBL4">The pearl of great price</string>
    <string name="PRBL5">The net</string>
    <string name="PRBL6">The forgiveness</string>
    <string name="PRBL7">The workers of the 11th hour</string>
    <string name="PRBL8">Both son</string>
    <string name="PRBL9">The marriage of the son of King</string>
    <string name="PRBL10">The ten virgins</string>
    <string name="PRBL11">The ten talents</string>
    <string name="PRBL12">The sheep and the goats</string>
    <string name="PRBL13">The seed growing secretly</string>
    <string name="PRBL14">The host</string>
    <string name="PRBL15">Both debtors</string>
    <string name="PRBL16">The Good Samaritan</string>
    <string name="PRBL17">The friend at midnight</string>
    <string name="PRBL18">The rich man and his barns</string>
    <string name="PRBL19">The watchful servants</string>
    <string name="PRBL20">The thrifty faithful and wise</string>
    <string name="bibleDefault" translatable="false">k</string>
    <string name="languageFr" translatable="false">Français</string>
    <string name="languageEn" translatable="false">English</string>
    <string name="languageIt" translatable="false">Italiano</string>
    <string name="languageEs" translatable="false">Española</string>
    <string name="mnuLanguage" translatable="false">Language / Lengua /\nLangue / Lingua / Idioma ?</string>
    <string name="widgetTvLang" translatable="false">-</string>
    <string name="widgetTvRef" translatable="false">R</string>
    <string name="widgetTvText" translatable="false">T</string>
    <string name="widgetBtnForward" translatable="false">\u25b7</string>
    <string name="widgetBtnPrev" translatable="false">\u25c1</string>
    <string name="widgetBtnDown" translatable="false">..</string>
    <string name="widgetIvFav" translatable="false">Favorite</string>
    <string name="widgetIvRefresh" translatable="false">Refresh</string>
    <string name="favSymbolFavDefault" translatable="false">†</string>
    <string name="mnuUiLayoutDefault" translatable="false">C</string>
</resources>