<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_open"
        android:title="@string/mnuOpen">
        <menu>
            <item
                android:id="@+id/mnu_open_verse"
                android:title="@string/mnuOpenVerse" />
            <item
                android:id="@+id/mnu_open_chapter"
                android:title="@string/mnuOpenChapter" />
            <item
                android:id="@+id/mnu_open_result"
                android:title="@string/mnuOpenResult" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_copy"
        android:title="@string/mnuCopy">
        <menu>
            <item
                android:id="@+id/mnu_copy_verse_to_clipboard"
                android:title="@string/mnuCopyVerseToClipboard" />
            <item
                android:id="@+id/mnu_copy_chapter_to_clipboard"
                android:title="@string/mnuCopyChapterToClipboard" />
            <item
                android:id="@+id/mnu_copy_result_to_clipboard"
                android:title="@string/mnuCopyResultToClipboard" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_share"
        android:title="@string/mnuShare">
        <menu>
            <item
                android:id="@+id/mnu_share_verse"
                android:title="@string/mnuShareVerse" />
            <item
                android:id="@+id/mnu_share_chapter"
                android:title="@string/mnuShareChapter" />
            <item
                android:id="@+id/mnu_share_result"
                android:title="@string/mnuShareResult" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_fav"
        android:title="@string/mnuNote">
        <menu>
            <item
                android:id="@+id/mnu_add_note"
                android:title="@string/mnuNoteFavAdd" />
            <item
                android:id="@+id/mnu_add_reading"
                android:title="@string/mnuNoteReadingAdd" />
            <item
                android:id="@+id/mnu_remove_note"
                android:title="@string/mnuNoteRemove" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_listen"
        android:title="@string/mnuListen">
        <menu>
            <item
                android:id="@+id/mnu_listen_stop"
                android:title="@string/mnuListenStop" />
            <item
                android:id="@+id/mnu_listen_replay"
                android:title="@string/mnuListenReplay" />
            <item
                android:id="@+id/mnu_listen_next_chapter"
                android:title="@string/mnuListenNextChapter" />
            <item
                android:id="@+id/mnu_listen_previous_chapter"
                android:title="@string/mnuListenPreviousChapter" />
            <item
                android:id="@+id/mnu_listen_current_chapter"
                android:title="@string/mnuListenCurrentChapter">
                <menu>
                    <item
                        android:id="@+id/mnu_listen_current_chapter_from_1"
                        android:title="@string/mnuListenCurrentChapterFrom1" />
                    <item
                        android:id="@+id/mnu_listen_current_chapter_from_pos"
                        android:title="@string/mnuListenCurrentChapterFromPos" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/mnu_edit"
        android:title="@string/mnuEmpty"
        android:titleCondensed="@string/mnuEmpty">
    </item>
    <item
        android:id="@+id/mnu_edit_select_from"
        android:title="@string/mnuEditSelectFrom">
    </item>
    <item
        android:id="@+id/mnu_edit_select_to"
        android:title="@string/mnuEditSelectTo">
    </item>
    <item
        android:id="@+id/mnu_edit_select_from_to"
        android:title="@string/mnuEditSelectFromTo">
    </item>
    <item
        android:id="@+id/mnu_edit_move"
        android:title="@string/mnuEditMove">
        <menu>
            <item
                android:id="@+id/mnu_edit_move_up"
                android:title="@string/mnuEditMoveUp" />
            <item
                android:id="@+id/mnu_edit_move_down"
                android:title="@string/mnuEditMoveDown" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_edit_add"
        android:title="@string/mnuEditAdd">
        <menu>
            <item
                android:id="@+id/mnu_edit_add_text"
                android:title="@string/mnuEditAddText" />
            <item
                android:id="@+id/mnu_edit_add_title_small"
                android:title="@string/mnuEditAddTitleSmall" />
            <item
                android:id="@+id/mnu_edit_add_title_large"
                android:title="@string/mnuEditAddTitleLarge" />
        </menu>
    </item>
    <item
        android:id="@+id/mnu_edit_update"
        android:title="@string/mnuEditUpdate">
    </item>
    <item
        android:id="@+id/mnu_edit_remove"
        android:title="@string/mnuEditRemove">
        <menu>
            <item
                android:id="@+id/mnu_edit_remove_confirm"
                android:title="@string/mnuEditRemoveConfirm" />
        </menu>
    </item>
</menu>
