<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_add_tab"
        android:orderInCategory="1"
        android:title="@string/mnuAddTab"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_remove_tab"
        android:orderInCategory="2"
        android:title="@string/mnuRemoveTab"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_show_fav"
        android:orderInCategory="3"
        android:title="@string/mnuShowFav"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_plans"
        android:orderInCategory="4"
        android:title="@string/mnuPlans"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_books"
        android:orderInCategory="5"
        android:title="@string/mnuBooks"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_reading"
        android:orderInCategory="6"
        android:title="@string/mnuReading"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_prbl"
        android:orderInCategory="7"
        android:title="@string/mnuPrbl"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_articles"
        android:orderInCategory="8"
        android:title="@string/mnuArticles"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_language"
        android:orderInCategory="49"
        android:title="@string/mnuLanguage"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/mnu_group_settings"
        android:orderInCategory="90"
        android:title="@string/mnuGroupSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_help"
        android:orderInCategory="98"
        android:title="@string/mnuHelp"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_about"
        android:orderInCategory="99"
        android:title="@string/mnuAbout"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnu_quit"
        android:orderInCategory="100"
        android:title="@string/mnuQuit"
        app:showAsAction="never" />
</menu>
