<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:padding="5dp">

    <Button
        android:id="@+id/btnLanguageEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageEn"
        android:paddingBottom="10dp"
        />

    <Button
        android:id="@+id/btnLanguageES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageEs"
        android:paddingBottom="10dp"
        />

    <Button
        android:id="@+id/btnLanguageFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageFr"
        android:paddingBottom="10dp"
        />

    <Button
        android:id="@+id/btnLanguageIT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageIt"
        android:paddingBottom="10dp"
        />

</GridLayout>