<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:id="@+id/llPlanMenu"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvPlanTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Plan" tools:ignore="HardcodedText"/>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnuOpen"
    />

    <Button
        android:id="@+id/btnMarkAllAboveAsRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnuMarkAllAboveAsRead"
        android:layout_marginTop="20dp"
    />

    <Button
        android:id="@+id/btnUnmarkAllAboveAsRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnuUnmarkAllAboveAsRead"
    />
</LinearLayout>