<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" tools:ignore="Overdraw">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_iv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/widgetIvRefresh"
            android:src="@drawable/ic_refresh_white_18dp"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:gravity="top|start"
        />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/widget_iv_fav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/widgetIvFav"
                android:src="@drawable/ic_star_border_white_18dp"
                android:paddingLeft="20dp"
                android:paddingRight="5dp"
                android:gravity="top"
                android:layout_weight="0"
            />

            <TextView
                android:id="@+id/widget_tv_ref"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#ffffff"
                android:contentDescription="@string/widgetTvRef"
                android:text="@string/widgetTvRef"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:gravity="top"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/widget_tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:contentDescription="@string/widgetTvLang"
            android:text="@string/widgetTvLang"
            android:textSize="12sp"
            android:textStyle="italic"
            android:paddingLeft="15dp"
            android:paddingRight="5dp"
            android:layout_weight="0"
            android:gravity="top|end"
        />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/widget_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:text="@string/widgetBtnPrev"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:layout_weight="0"
        />

        <TextView
            android:id="@+id/widget_tv_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:contentDescription="@string/widgetTvText"
            android:text="@string/widgetTvText"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="top"
            android:layout_weight="1"
        />

        <TextView
            android:id="@+id/widget_btn_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:text="@string/widgetBtnForward"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:layout_weight="0"
        />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">

        <TextView
            android:id="@+id/widget_btn_down"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/widgetBtnDown"
            android:padding="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:gravity="bottom|center"
            android:layout_weight="1"
        />
    </LinearLayout>
</LinearLayout>